# full-template

./: .gitmodules  CMakeLists.txt  README.md  api.cpp  api.hpp  implementation.hpp  interface.hpp  main.cpp  natives.cpp  natives.hpp  private.hpp  public.hpp  real-world-weather.inc  test.pwn  weather-api.hpp  weather-component.cpp  weather-component.hpp  weather-extension.cpp  weather-extension.hpp  weather-natives.cpp  weather-natives.hpp  weather-region.cpp  weather-region.hpp  weather.hpp
docker/: build.sh
